[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/MenuBar.gd" type="Script" id=1]

[node name="MenuBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -870.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.14902, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 30.0
alignment = 2

[node name="Minimize" type="Button" parent="HBoxContainer"]
margin_left = 736.0
margin_right = 766.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
text = "_"
flat = true

[node name="Exit" type="Button" parent="HBoxContainer"]
margin_left = 770.0
margin_right = 800.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
text = "X"
flat = true

[connection signal="gui_input" from="." to="." method="_on_MenuBar_gui_input"]
[connection signal="pressed" from="HBoxContainer/Minimize" to="." method="_on_Minimize_pressed"]
[connection signal="pressed" from="HBoxContainer/Exit" to="." method="_on_Exit_pressed"]
